Can parse part of town and generate folder and file from it.

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,3 +5,12 @@
 
 version: 2
 updates:
+  - package-ecosystem: "gradle"
+      directory: "/"
+      schedule:
+        interval: "daily"
+      target-branch: "develop"
+      assignees:
+        - "findusl"
+      reviewers:
+        - "findusl"
