--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-	"id": "obsidian-dnd-generator",
+	"id": "dnd-generator",
 	"name": "Dnd Generator Plugin",
 	"version": "0.0.1",
 	"minAppVersion": "0.9.12",
