--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,16 +1,17 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
 # Please see the documentation for all configuration options:
 # https://help.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
+
+# Gradle note: The dependabot does not find the versions in gradle.properties,
+# but constants in the build.gradle file worked.
 
 version: 2
 updates:
   - package-ecosystem: "gradle"
     directory: "/"
     schedule:
-    interval: "daily"
+      interval: "daily"
     target-branch: "develop"
     assignees:
-    - "findusl"
+      - "findusl"
     reviewers:
-    - "findusl"
+      - "findusl"
